add MongoDb support
