# api/v2/models/stored_alert.go
@@ -1,0 +1,88 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// StoredAlert stored alert
+//
+// swagger:model storedAlert
+type StoredAlert struct {
+
+	// alertdata
+	// Required: true
+	Alertdata interface{} `json:"alertdata"`
+
+	// time
+	// Required: true
+	Time *string `json:"time"`
+}
+
+// Validate validates this stored alert
+func (m *StoredAlert) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateAlertdata(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateTime(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *StoredAlert) validateAlertdata(formats strfmt.Registry) error {
+
+	if m.Alertdata == nil {
+		return errors.Required("alertdata", "body", nil)
+	}
+
+	return nil
+}
+
+func (m *StoredAlert) validateTime(formats strfmt.Registry) error {
+
+	if err := validate.Required("time", "body", m.Time); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// ContextValidate validates this stored alert based on context it is used
+func (m *StoredAlert) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *StoredAlert) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *StoredAlert) UnmarshalBinary(b []byte) error {
+	var res StoredAlert
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
