# api/v2/restapi/operations/alertmanager_api.go
@@ -1,19 +1,5 @@
 // Code generated by go-swagger; DO NOT EDIT.
 
-// Copyright Prometheus Team
-// Licensed under the Apache License, Version 2.0 (the "License");
-// you may not use this file except in compliance with the License.
-// You may obtain a copy of the License at
-//
-// http://www.apache.org/licenses/LICENSE-2.0
-//
-// Unless required by applicable law or agreed to in writing, software
-// distributed under the License is distributed on an "AS IS" BASIS,
-// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-// See the License for the specific language governing permissions and
-// limitations under the License.
-//
-
 package operations
 
 // This file was generated by the swagger tool.
@@ -38,6 +24,7 @@ import (
 	"github.com/prometheus/alertmanager/api/v2/restapi/operations/general"
 	"github.com/prometheus/alertmanager/api/v2/restapi/operations/receiver"
 	"github.com/prometheus/alertmanager/api/v2/restapi/operations/silence"
+	"github.com/prometheus/alertmanager/api/v2/restapi/operations/stored_alert"
 )
 
 // NewAlertmanagerAPI creates a new Alertmanager instance
@@ -82,6 +69,9 @@ func NewAlertmanagerAPI(spec *loads.Document) *AlertmanagerAPI {
 		}),
 		GeneralGetStatusHandler: general.GetStatusHandlerFunc(func(params general.GetStatusParams) middleware.Responder {
 			return middleware.NotImplemented("operation general.GetStatus has not yet been implemented")
+		}),
+		StoredAlertGetStoredAlertsHandler: stored_alert.GetStoredAlertsHandlerFunc(func(params stored_alert.GetStoredAlertsParams) middleware.Responder {
+			return middleware.NotImplemented("operation stored_alert.GetStoredAlerts has not yet been implemented")
 		}),
 		AlertPostAlertsHandler: alert.PostAlertsHandlerFunc(func(params alert.PostAlertsParams) middleware.Responder {
 			return middleware.NotImplemented("operation alert.PostAlerts has not yet been implemented")
@@ -139,6 +129,8 @@ type AlertmanagerAPI struct {
 	SilenceGetSilencesHandler silence.GetSilencesHandler
 	// GeneralGetStatusHandler sets the operation handler for the get status operation
 	GeneralGetStatusHandler general.GetStatusHandler
+	// StoredAlertGetStoredAlertsHandler sets the operation handler for the get stored alerts operation
+	StoredAlertGetStoredAlertsHandler stored_alert.GetStoredAlertsHandler
 	// AlertPostAlertsHandler sets the operation handler for the post alerts operation
 	AlertPostAlertsHandler alert.PostAlertsHandler
 	// SilencePostSilencesHandler sets the operation handler for the post silences operation
@@ -240,6 +232,9 @@ func (o *AlertmanagerAPI) Validate() error {
 	}
 	if o.GeneralGetStatusHandler == nil {
 		unregistered = append(unregistered, "general.GetStatusHandler")
+	}
+	if o.StoredAlertGetStoredAlertsHandler == nil {
+		unregistered = append(unregistered, "stored_alert.GetStoredAlertsHandler")
 	}
 	if o.AlertPostAlertsHandler == nil {
 		unregistered = append(unregistered, "alert.PostAlertsHandler")
@@ -363,6 +358,10 @@ func (o *AlertmanagerAPI) initHandlerCache() {
 		o.handlers["GET"] = make(map[string]http.Handler)
 	}
 	o.handlers["GET"]["/status"] = general.NewGetStatus(o.context, o.GeneralGetStatusHandler)
+	if o.handlers["GET"] == nil {
+		o.handlers["GET"] = make(map[string]http.Handler)
+	}
+	o.handlers["GET"]["/stored_alerts"] = stored_alert.NewGetStoredAlerts(o.context, o.StoredAlertGetStoredAlertsHandler)
 	if o.handlers["POST"] == nil {
 		o.handlers["POST"] = make(map[string]http.Handler)
 	}
@@ -412,6 +411,6 @@ func (o *AlertmanagerAPI) AddMiddlewareFor(method, path string, builder middlewa
 	}
 	o.Init()
 	if h, ok := o.handlers[um][path]; ok {
-		o.handlers[um][path] = builder(h)
+		o.handlers[method][path] = builder(h)
 	}
 }
