# api/v2/restapi/operations/stored_alert/get_stored_alerts_responses.go
@@ -1,0 +1,62 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package stored_alert
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/prometheus/alertmanager/api/v2/models"
+)
+
+// GetStoredAlertsOKCode is the HTTP code returned for type GetStoredAlertsOK
+const GetStoredAlertsOKCode int = 200
+
+/*
+GetStoredAlertsOK Get stored alerts response
+
+swagger:response getStoredAlertsOK
+*/
+type GetStoredAlertsOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload models.StoredAlerts `json:"body,omitempty"`
+}
+
+// NewGetStoredAlertsOK creates GetStoredAlertsOK with default headers values
+func NewGetStoredAlertsOK() *GetStoredAlertsOK {
+
+	return &GetStoredAlertsOK{}
+}
+
+// WithPayload adds the payload to the get stored alerts o k response
+func (o *GetStoredAlertsOK) WithPayload(payload models.StoredAlerts) *GetStoredAlertsOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get stored alerts o k response
+func (o *GetStoredAlertsOK) SetPayload(payload models.StoredAlerts) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetStoredAlertsOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	payload := o.Payload
+	if payload == nil {
+		// return empty array
+		payload = models.StoredAlerts{}
+	}
+
+	if err := producer.Produce(rw, payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+}
